RESOLVED FIXED311448
Fix mismatched log arguments in deleteAndRestrictWebsiteDataForRegistrableDomains
https://bugs.webkit.org/show_bug.cgi?id=311448
Summary Fix mismatched log arguments in deleteAndRestrictWebsiteDataForRegistrableDom...
v_periwal
Reported 2026-04-03 15:55:54 PDT
.
Attachments
v_periwal
Comment 1 2026-04-03 15:55:55 PDT
v_periwal
Comment 2 2026-04-03 16:02:29 PDT
EWS
Comment 3 2026-04-03 20:32:08 PDT
Committed 310553@main (96c212dd032e): <https://commits.webkit.org/310553@main> Reviewed commits have been landed. Closing PR #62005 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.