Fix mismatched log arguments in deleteAndRestrictWebsiteDataForRegistrableDomains https://bugs.webkit.org/show_bug.cgi?id=311448 rdar://174043460

Reviewed by Richard Robinson.

The log lists "domainsToDeleteAllButHttpOnlyCookiesFor" before
"domainsToDeleteAllScriptWrittenStorageFor" but hostnamesWithScriptWrittenCookiesToDelete
was passed before hostnamesWithCookiesToDeleteAllButHttpOnly. Swap the arguments to
match the order.

* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::deleteAndRestrictWebsiteDataForRegistrableDomains):

Canonical link: https://commits.webkit.org/310553@main